--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=devic
-    e-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer dist="dist/index.js"></script>
     <title>Document</title>
 </head>
